[package]
name = "rust-doc-tool"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0.28"
reqwest = "0.10.4"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
url = { version = "2.1.1", features = ["serde"] }
regex = "1.3.7"
